# agent-native-workflow

./: .gitignore  ENHANCE.md  PROMPT.md  README.md  main.py  pyproject.toml  requirements.md  result.md
docs/: DESIGN-blacklist-permissions.md  PIPELINE-FIXES.md  REDESIGN.md  VISUALIZE.md  ai-native-workflow.md  design-jira-mcp-integration.md  pipeline-analysis.md
src/agent_native_workflow/: __init__.py  __main__.py  api.py  cli.py  config.py  context.py  detect.py  domain.py  log.py  notify.py  pipeline.py  prompt_loader.py  requirements_loader.py  security.py  store.py  verify.py
src/agent_native_workflow/commands/: __init__.py  clean.py  detect.py  export.py  init.py  init_templates.py  log.py  parser.py  providers.py  run.py  status.py  verify.py
src/agent_native_workflow/gates/: __init__.py  runner.py
src/agent_native_workflow/gates/digesters/: __init__.py  base.py  cargo_digester.py  factory.py  generic.py  go_test_digester.py  gradle_digester.py  (+2 more)
src/agent_native_workflow/runners/: __init__.py  base.py  claude.py  codex.py  copilot.py  cursor.py  factory.py
src/agent_native_workflow/strategies/: __init__.py  factory.py  none.py  review.py  triangulation.py
src/agent_native_workflow/visualization/: __init__.py  base.py  multiplex.py  plain.py  rich_ui.py  textual_ui.py  textual_ui.tcss
tests/: test_blacklist.py  test_cargo_digester.py  test_claude_runner.py  test_config.py  test_copilot_runner.py  test_detect_snapshot.py  test_digesters.py  test_dry_run.py  test_gates_runner.py  test_go_test_digester.py  test_init_command.py  test_log_command.py  test_multiplex_errors.py  test_notify.py  test_pipeline_no_progress.py  test_pipeline_resume.py  test_status.py  test_store_session.py  test_strategies.py  test_streaming.py
