[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_native_workflow"]

[project]
name = "agent-native-workflow"
version = "0.1.0"
description = "Multi-CLI AI-native triangulation workflow with real-time visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
agent-native-workflow = "agent_native_workflow.cli:main"
agn = "agent_native_workflow.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
